--- a/tests/test_data/config/missing_keys.toml
+++ b/tests/test_data/config/missing_keys.toml
@@ -1,4 +1,4 @@
 [colors]
-selected_name = "selected"
-selected_fg = "ffffff"
-selected_bg = "3f88c5"
+selected_name = "test"
+selected_fg = "555555"
+selected_bg = "111111"
